--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <title>Plank</title>
-  <link rel="icon" href="images/favicon.png">
+  <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
   <section id = "part1">
     <div class = "container-fluid">
     <nav class = "navbar navbar-expand-lg navbar-dark navbar-custom">
-      <a class = "navbar-brand" href = ""><img class = "navbar-logo" src = "images/Original.svg" alt = "plank-logo" /></a>
+      <a class = "navbar-brand" href = ""><img class = "navbar-logo" src = "Original.svg" alt = "plank-logo" /></a>
       <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbarSupportedContent" aria-controls = "navbarSupportedContent" aria-expanded = "false" aria-label = "Toggle navigation">
       <span class = "navbar-toggler-icon"></span>
         </button>
