--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
 
     </nav>
 
-    <h1 class = "heading">invest in early stage <span class = "heading-span">startups with us.</span></h1>
+    <h1 class = "heading">invest in early stage startups.</h1>
+
 
     <h2 class = "join_us">join 100K+ investors who get benefits of massive growth daily</h2>
 
-    <button type = "button" class = "rounded_button btn btn-light btn-lg">
+    <center><button type = "button" class = "rounded_button btn btn-light btn-lg">
       <p class = "button-text">Download PLANK</p>
-    </button>
-    </div>
+    </button></center></div>
+
   </section>
 
 </body>
